feat: add internet permission in AndroidManifest.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,9 @@ android {
     compileSdk 30
     buildToolsVersion "30.0.3"
 
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
     defaultConfig {
         applicationId "com.implude.niche"
         minSdk 23
@@ -17,6 +20,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resValue "string", "tmap_api_key", properties.getProperty("api.key")
     }
 
     buildTypes {
@@ -48,6 +52,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation files('libs/com.skt.Tmap_1.67.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
