--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-beta02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.7"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
