--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        apollo_version = "2.4.7"
+        apollo_version = "2.5.7"
         koin_version = "3.0.2"
     }
     repositories {
@@ -11,7 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-beta02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
-        classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.7"
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:$apollo_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
