--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //sliding up pannel
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
