--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         apollo_version = "2.5.7"
         koin_version = "3.0.2"
+        glide_version = "4.12.0"
     }
     repositories {
         google()
