--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,15 +18,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    
-    - name: Install apollo
-      run: npm install -g apollo
-    - name: Download schema
-      run: apollo client:download-schema --endpoint="https://niche-backend-ssrfsfwh3a-uc.a.run.app/" ./app/src/main/graphql/com/implude/niche/schema.sdl
         
+    - name: Download schema
+      run: ./gradlew downloadApolloSchema --endpoint=https://niche-backend-ssrfsfwh3a-uc.a.run.app/schema.graphql --schema=app/src/main/graphql/com/implude/niche/schema.sdl
+    
     - name: Access TMAP_API_APP_KEY
       env:
         TMAP_API_APP_KEY: ${{ secrets.TMAP_API_APP_KEY }}
