--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Niche">
         <activity
+            android:name=".presentation.CertificateActivity"
+            android:exported="true" />
+        <activity
             android:name=".presentation.EditStoreInfoActivity"
             android:exported="true" />
         <activity
